--- a/app/src/main/res/layout/item_customer_record.xml
+++ b/app/src/main/res/layout/item_customer_record.xml
@@ -4,28 +4,63 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:weightSum="14">
 
+    <!-- 产品名称 (2/12) -->
     <TextView
         android:id="@+id/tvProductName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="产品名称"
-        android:textSize="16sp" />
+        android:layout_weight="2"
+        android:textSize="10sp"/>
 
+    <!-- 批号 (2/12) -->
+    <TextView
+        android:id="@+id/tvBatchNum"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:textSize="10sp"/>
+
+    <!-- 单价 (2/12) -->
+    <TextView
+        android:id="@+id/tvPrice"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="2"
+        android:textSize="10sp"/>
+
+    <!-- 数量 (2/12) -->
     <TextView
         android:id="@+id/tvQuantity"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="数量"
-        android:textSize="16sp"
-        android:layout_marginEnd="16dp" />
+        android:layout_weight="2"
+        android:textSize="10sp"/>
 
+    <!-- 总价 (2/12) -->
     <TextView
         android:id="@+id/tvTotalPrice"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="总价"
-        android:textSize="16sp" />
+        android:layout_weight="2"
+        android:textSize="10sp"/>
+
+    <!-- 日期 (2/12) -->
+    <TextView
+        android:id="@+id/tvSaleDate"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="3"
+        android:textSize="10sp"/>
+
+    <!-- 状态 (2/12) -->
+    <TextView
+        android:id="@+id/tvState"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textSize="10sp"
+        android:textStyle="bold"/>
 </LinearLayout>
