--- a/app/src/main/res/layout/item_purchase_record.xml
+++ b/app/src/main/res/layout/item_purchase_record.xml
@@ -81,7 +81,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="（件）"
+            android:text="（斤）"
             android:layout_weight="1"
             android:textSize="14sp" />
 
