--- a/app/src/main/res/layout/fragment_customer_sales.xml
+++ b/app/src/main/res/layout/fragment_customer_sales.xml
@@ -107,6 +107,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"/>
+        <Button
+            android:id="@+id/btnSettleAll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="一键结算"
+            android:layout_marginEnd="8dp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/green1"/>
 
         <Button
             android:id="@+id/btnAddSalesRecord"
