--- a/app/src/main/res/layout/fragment_income_statement.xml
+++ b/app/src/main/res/layout/fragment_income_statement.xml
@@ -35,14 +35,29 @@
         android:padding="16dp">
 
         <!-- 营业收入 -->
-        <TextView
-            android:id="@+id/tv_revenue"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="8dp">
+        <TextView
+            android:id="@+id/tv_revenue"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center"
             android:textSize="18sp"
-            android:layout_marginBottom="8dp"
             android:text="营业收入：--"/>
 
+        <Button
+            android:id="@+id/btn_revenue_detail"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:background="@drawable/information"
+            android:layout_marginStart="8dp"
+            android:layout_gravity="center"
+            android:contentDescription="收入详情"/>
+        </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
