--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,14 +33,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="24dp">
+                android:padding="20dp">
 
                 <!-- 标题 -->
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="欢迎使用"
-                    android:textColor="#2E7D32"
+                    android:textColor="@color/primary_green"
                     android:textSize="28sp"
                     android:textStyle="bold"
                     android:gravity="center"
@@ -95,9 +95,29 @@
                     android:textSize="16sp"
                     app:cornerRadius="24dp"
                     app:iconGravity="textStart"
-                    app:backgroundTint="#2E7D32"
+                    app:backgroundTint="@color/primary_green"
                     app:rippleColor="#81C784" />
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:layout_marginBottom="4dp">
+
+                    <CheckBox
+                        android:id="@+id/cb_agree"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:text="我已经阅读并同意《用户协议》"
+                        android:textSize="12sp"
+                        android:textStyle="bold"/>
+                </LinearLayout>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -107,7 +127,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginTop="16dp">
+            android:layout_marginTop="2dp">
 
             <TextView
                 android:id="@+id/tv_forgot_password"
