--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,14 +17,21 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    // 在styles.xml中添加
     <style name="AgreementDialog" parent="Theme.MaterialComponents.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/bg_gradient</item>
         <item name="buttonBarPositiveButtonStyle">@style/AgreementButton</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="AgreementButton" parent="Widget.MaterialComponents.Button">
         <item name="backgroundTint">#2E7D32</item>
         <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="AgreementTextStyle">
+        <item name="android:lineSpacingMultiplier">1.2</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#4CAF50</item>
+    </style>
 </resources>
